--- a/assignment/index.html
+++ b/assignment/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <div class = "header">
+    <header>
       <h1>Week 5 Assignment - Part 2</h1>
       <h2>Sarah's Record Shop</h2>
-    </div>
-    <div class = "main">
+    </header>
+    <main>
       <p>See console for output.</p>
-    </div>
+    </main>
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
